// token-wallet.proto

syntax = "proto3";

package tokenWallet;

// Request message for getting token balance
message TokenBalanceRequest {
    string user_id = 1; // The ID of the user
}

// Request message for adding or subtracting tokens
message TokenRequest {
    string user_id = 1;       // The ID of the user
    double token_amount = 2;  // The amount of tokens to add or subtract
}

// Response message for balance-related requests
message TokenBalanceResponse {
    double tokens = 1;        // The user's token balance
}

// Response message for add/subtract token operations
message TokenUpdateResponse {
    string message = 1;       // Operation result message
}

// TokenWalletService definition
service TokenWalletService {
    rpc GetTokenBalance (TokenBalanceRequest) returns (TokenBalanceResponse);
    rpc AddToken (TokenRequest) returns (TokenUpdateResponse);
    rpc SubtractToken (TokenRequest) returns (TokenUpdateResponse);
}
